--- a/index.html
+++ b/index.html
@@ -19,33 +19,77 @@
 <body>
 <div class="container">
     <section>
-        <nav class="row header">
-            <ul>
-                <li><a href="">My Bio</a></li>
-                <li><a href="">Hobbys</a></li>
-                <li><a href="">Skills</a></li>
-                <li><a href="">Contact me</a></li>
+        <nav class="row header" id="marker1">
+            <ul class="list-inline col align-self-center">
+                <li class="list-inline-item item-customize"><a class="header-link" href="#marker2"><h3>My Bio</h3></a></li>
+                <li class="list-inline-item item-customize"><a class="header-link" href="#marker3"><h3>Hobbys</h3></a></li>
+                <li class="list-inline-item item-customize"><a class="header-link" href="#marker4"><h3>Skills</h3></a></li>
+                <li class="list-inline-item item-customize"><a class="header-link" href=""><h3>Contact me</h3></a></li>
             </ul>
         </nav>
-        <div class="row content" id="index">
+        <div class="row content index">
         </div>
     </section>
     <section>
-        <header class="row header">
-            <p>Pidor Govna</p>
+        <header class="row header" id="marker2">
+            <p class="col align-self-center header-text">My Bio</p>
         </header>
-        <div class="row content" id="bio">
+        <div class="row content bio">
+            <div id="carouselExampleIndicators" class=" col align-self-center carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active center">
+                        <img class="slider-img" src="resources/140305125100_1_540x360.jpg" width="800" height="600" alt="First slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Childhood</h5>
+                            <p>I was born in Lviv in 1995, although my roots begin in the north of Ukraine.
+                                My childhood is the brightest time of my life. Carefree days with many friends playing in a variety of games. There was no limit to our imagination.
+                                I spent the summer in my second hometown - Sumy. It was quite difficult for me to adapt to the new environment, so every day I begged parents to go back.
+                                It is worth noting that in my childhood I was an avid collector. Gathering almost everything from stickers to crumbs from bottles of beer.  </p>
+                        </div>
+                    </div>
+                    <div class="carousel-item center">
+                        <img src="resources/About.jpg" width="800" height="600" alt="Second slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Youth</h5>
+                            <p>Drink Vodka</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item center">
+                        <img class="text-center" class="" src="resources/завантаження.jpg" width="800" height="600" alt="Third slide">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Maturity</h5>
+                            <p>Write code on JS</p>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
     <section>
-        <header class="row header">Pidor Govna</header>
-        <div class="row content" id="holidays">
-
+        <header class="row header" id="marker3">
+            <p class="col align-self-center header-text">Hobbys</p>
+        </header>
+        <div class="row content holidays">
         </div>
     </section>
     <section>
-        <header class="row header">Pidor Govna</header>
-        <div class="row content" id="skills">
+        <header class="row header" id="marker4">
+            <p class="col align-self-center header-text">Skills</p>
+        </header>
+        <div class="row content skills">
         </div>
     </section>
 </div>
